[gd_scene load_steps=20 format=2]

[ext_resource path="res://Morcegue.tscn" type="PackedScene" id=1]
[ext_resource path="res://songs/cantoras108bpm-001calopsita.ogg" type="AudioStream" id=2]
[ext_resource path="res://Leoa.tscn" type="PackedScene" id=3]
[ext_resource path="res://songs/cantoras.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sapa.tscn" type="PackedScene" id=5]
[ext_resource path="res://Beluga.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/score_screen2.png" type="Texture" id=7]
[ext_resource path="res://ScoreScreen.gd" type="Script" id=8]
[ext_resource path="res://art/fonts/Rubik-SemiBold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://art/fonts/Rubik-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Label.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_color = Color( 0.807843, 0.282353, 0.478431, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 52
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 52
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 160
outline_size = 18
outline_color = Color( 0.894118, 0.286275, 0.513726, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 52
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 9 )

[node name="ScoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.8877
margin_right = 1.8877
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="CalopsitaSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="PodiumLeft" type="Node2D" parent="."]
position = Vector2( 582.292, 1018.49 )
scale = Vector2( 2.5, 2.5 )

[node name="Baleia" parent="PodiumLeft" instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, -16.0009 )
scale = Vector2( 1.1, 1.1 )

[node name="Leoa" parent="PodiumLeft" instance=ExtResource( 3 )]
visible = false
position = Vector2( 3.60001, 4.80005 )

[node name="Sustain" parent="PodiumLeft/Leoa" index="2"]
visible = true

[node name="Error" parent="PodiumLeft/Leoa" index="3"]
visible = false

[node name="Morcegue" parent="PodiumLeft" instance=ExtResource( 1 )]
visible = false
position = Vector2( 7.59998, -43.2 )
scale = Vector2( 0.7, 0.7 )

[node name="Idle" parent="PodiumLeft/Morcegue" index="1"]
visible = false

[node name="Sustain" parent="PodiumLeft/Morcegue" index="2"]
visible = true
flip_h = true

[node name="Sapa" parent="PodiumLeft" instance=ExtResource( 5 )]
visible = false
position = Vector2( 38.8, -52.4003 )
scale = Vector2( 0.65, 0.65 )

[node name="Sustain" parent="PodiumLeft/Sapa" index="2"]
position = Vector2( -75.0137, -34.6802 )

[node name="TotalBeatsLabel" type="Label" parent="."]
margin_left = 1106.0
margin_top = 260.0
margin_right = 1442.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 1 )
text = "TOTAL BEATS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalBeats" type="Label" parent="."]
margin_left = 1556.25
margin_top = 267.0
margin_right = 1661.25
margin_bottom = 329.0
custom_fonts/font = SubResource( 2 )
text = "000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeatsHitLabel" type="Label" parent="."]
margin_left = 1106.0
margin_top = 343.612
margin_right = 1364.0
margin_bottom = 405.612
custom_fonts/font = SubResource( 3 )
text = "BEATS HIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeatsHit" type="Label" parent="."]
margin_left = 1556.25
margin_top = 342.836
margin_right = 1661.25
margin_bottom = 404.836
custom_fonts/font = SubResource( 2 )
text = "000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeatsMissedLabel" type="Label" parent="."]
margin_left = 1106.0
margin_top = 433.0
margin_right = 1470.0
margin_bottom = 495.0
custom_fonts/font = SubResource( 4 )
text = "BEATS MISSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeatsMissed" type="Label" parent="."]
margin_left = 1556.25
margin_top = 432.336
margin_right = 1661.25
margin_bottom = 494.336
custom_fonts/font = SubResource( 2 )
text = "000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalScoreLabel" type="Label" parent="."]
margin_left = 1106.0
margin_top = 521.797
margin_right = 1431.0
margin_bottom = 583.797
custom_fonts/font = SubResource( 5 )
text = "FINAL SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalScore" type="Label" parent="."]
margin_left = 1487.24
margin_top = 521.133
margin_right = 1662.24
margin_bottom = 583.133
custom_fonts/font = SubResource( 2 )
text = "00000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grade" type="Label" parent="."]
margin_left = 1214.52
margin_top = 598.714
margin_right = 1342.52
margin_bottom = 788.714
custom_fonts/font = SubResource( 6 )
text = "S"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percentage" type="Label" parent="."]
margin_left = 1513.49
margin_top = 710.264
margin_right = 1659.49
margin_bottom = 772.264
custom_fonts/font = SubResource( 7 )
text = "000%"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 1510.97
margin_top = 773.056
margin_right = 1656.97
margin_bottom = 835.056
custom_fonts/font = SubResource( 7 )
align = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="LinkButton" parent="."]
margin_left = 1253.32
margin_top = 896.896
margin_right = 1498.32
margin_bottom = 953.896
rect_rotation = -2.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.886275, 0.301961, 0.517647, 1 )
text = "CONTINUE"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="PodiumLeft/Baleia"]
[editable path="PodiumLeft/Leoa"]
[editable path="PodiumLeft/Morcegue"]
[editable path="PodiumLeft/Sapa"]
